--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,29 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Botones
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <button ion-button  > Este es un botón por defecto</button>
+    <button ion-button color="secondary"> Este es un botón secundario</button>
+    <button ion-button color="light"> Este es un botón light</button>
+    <button ion-button color="dark"> Este es un botón dark</button>
+    <button ion-button color="danger"> Este es un botón danger</button>
+    <h5>Usando outline</h5>
+    <button ion-button outline > Este es un botón por defecto</button>
+    <h5>Usando clear</h5>
+    <button ion-button color="secondary" clear> Este es un botón secundario</button>
+    <h5>Botones redondeado</h5>
+    <button ion-button color="danger" round> Este es un botón danger</button>
+    <h5>Block</h5>
+    <button ion-button block > Este es un botón por defecto</button>
+    <h5>Full y round </h5>
+    <button ion-button color="dark" full round> Este es un botón dark</button>
+    <h5>Tamaños</h5>
+    <button ion-button small > Este es un botón por small</button>
+    <button ion-button  medium > Este es un botón por medium</button>
+    <button ion-button large > Este es un botón por large</button>
 </ion-content>
