menu con tipos de botones

--- a/src/pages/block/block.html
+++ b/src/pages/block/block.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the OutlinePage page.
+  Generated template for the BlockPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,16 +7,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Botón Outline</ion-title>
+    <ion-title>Botón Block</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-    <button ion-button outline > Este es un botón outline</button>
+    <button ion-button block > Este es un botón block</button>
     <hr>
-    <button ion-button [navPush]="clearPage" > Siguiente</button>
+    <button ion-button [navPush]="fullPage" > Siguiente</button>
     <button ion-button navPop  > Atras </button>
     <button ion-button [navPush]="homePage"  > Inicio </button>
 </ion-content>
