--- a/src/pages/color/color.html
+++ b/src/pages/color/color.html
@@ -7,12 +7,21 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>color</ion-title>
+    <ion-title>Color de Botones</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <button ion-button  > Este es un botón por defecto</button>
+  <button ion-button color="secondary"> Este es un botón secundario</button>
+  <button ion-button color="light"> Este es un botón light</button>
+  <button ion-button color="dark"> Este es un botón dark</button>
+  <button ion-button color="danger"> Este es un botón danger</button>
+  <hr>
+  
+  <button ion-button [navPush]="tamanosPage" > Siguiente</button>
+  <button ion-button navPop  > Atras </button>
+  <button ion-button [navPush]="homePage"  > Inicio </button>
 </ion-content>
